--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ matrix:
           sudo: required
           compiler: gcc
         - os: osx
-          osx_image: xcode7.3
+          osx_image: xcode8
           compiler: gcc
         - os: osx
-          osx_image: xcode7.3
+          osx_image: xcode8
           compiler: clang
 
 before_install:
@@ -27,7 +27,7 @@ before_install:
 
 before_script:
     - git clone https://github.com/neuromorphic-paris/sepia.git
-    - cd sepia && premake4 install && cd ..
+    - cd sepia && sudo premake4 install && cd ..
     - git clone https://github.com/neuromorphic-paris/tarsier.git
     - cd tarsier && premake4 install && cd ..
 
